--- a/config.toml
+++ b/config.toml
@@ -122,7 +122,7 @@ paginate = 10
     longitude = "-77.028333"
 
 [Permalinks]
-    blog = "/blog/:year/:month/:day/:filename/"
+    blog = "/blog/:filename/"
 
 # Enable or disable top bar with social icons
 [params.topbar]
